[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "instagram-media-api"
version = "1.0.0"
description = "Professional API to extract Instagram photos, videos, and Reels."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Mobius"}
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "curl_cffi>=0.7.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.setuptools]
packages = ["api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "api"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "W"]

[tool.ruff.format]
quote-style = "double"
